--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,1 +1,23 @@
-<p>product-list works!</p>
+<h1>List of Products</h1>
+
+<table>
+  <thead>
+    <th>Title</th>
+    <th>Price</th>
+    <th>Discount (%)</th>
+    <th>Stock</th>
+    <th>Brand</th>
+    <th>Category</th>
+  </thead>
+  <tbody>
+    <tr *ngFor="let product of products">
+      <td>{{ product.title }}</td>
+      <td>{{ product.price }}</td>
+      <td>{{ product.discountPercentage }}</td>
+      <td>{{ product.stock }}</td>
+      <td>{{ product.brand }}</td>
+      <td>{{ product.category }}</td>
+      <td><button>Edit</button></td>
+    </tr>
+  </tbody>
+</table>
