--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -9,5 +9,37 @@
   <input id="last-name" type="text" formControlName="lastName" />
   <br />
   <br />
-  <button type="submit">Save</button>
+  <div formGroupName="address">
+    <h2>Address</h2>
+
+    <label for="street">Street: </label>
+    <input id="street" type="text" formControlName="street" />
+    <br />
+    <br />
+    <label for="city">City: </label>
+    <input id="city" type="text" formControlName="city" />
+    <br />
+    <br />
+    <label for="state">State: </label>
+    <input id="state" type="text" formControlName="state" />
+    <br />
+    <br />
+    <label for="zip">Zip: </label>
+    <input id="zip" type="text" formControlName="zip" />
+  </div>
+  <br />
+  <br />
+  <div formArrayName="aliases">
+    <h2>Aliases</h2>
+    <button type="button" (click)="addAlias()">+ Add another alias</button>
+    <br />
+    <br />
+    <div *ngFor="let alias of aliases.controls; let i = index">
+      <label for="alias-{{ i }}">Alias: </label>
+      <input id="alias-{{ i }}" type="text" [formControlName]="i" />
+    </div>
+    <br />
+    <br />
+  </div>
+  <button type="submit" [disabled]="!profileForm.valid">Save</button>
 </form>
