--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <h1>List of Products</h1>
 
-<table>
+<table id="products">
   <thead>
     <th>Title</th>
     <th>Price</th>
@@ -8,6 +8,7 @@
     <th>Stock</th>
     <th>Brand</th>
     <th>Category</th>
+    <th></th>
   </thead>
   <tbody>
     <tr *ngFor="let product of products">
