add additional routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
   <ul class="nav nav-pills">
     <li><a class="nav-link" routerLink="/welcome">Home</a></li>
     <li><a class="nav-link" routerLink="/products">Product List</a></li>
+    <li><a class="nav-link" routerLink="/users">User List</a></li>
+    <li><a class="nav-link" routerLink="/todos">Todo List</a></li>
   </ul>
 </nav>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
